5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4464/executions/1649_2711.log
== TEST (2019-04-10 18:11:28) 
-- CODE:
valorD = float(input("saldo dispunível,sinhor:"))
Qtikets = float(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
QpassB = float(input("quantos passes deseja, sinhor:"))
VpassB = float(input("valor dos passes , sinhor:"))

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:11:41) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = float(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
QpassB = float(input("quantos passes deseja, sinhor:"))
VpassB = float(input("valor dos passes , sinhor:"))

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:13:29) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
QpassB = int(input("quantos passes deseja, sinhor:"))
VpassB = float(input("valor dos passes , sinhor:"))


-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:15:08) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
QpassB = int(input("quantos passes deseja, sinhor:"))
VpassB = float(input("valor dos passes , sinhor:"))
if valorD < (Qtikets+Vtikets+QpassB+VpassB)

-- ERROR:
File "XXXX", line 6
    if valorD < (Qtikets+Vtikets+QpassB+VpassB)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:15:46) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
QpassB = int(input("quantos passes deseja, sinhor:"))
VpassB = float(input("valor dos passes , sinhor:"))
if valorD < (Qtikets+Vtikets+QpassB+VpassB):
	print("suficiente".upper)

-- ERROR:
File "XXXX", line 6
    if valorD < (Qtikets+Vtikets+QpassB+VpassB)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:16:41) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
QpassB = int(input("quantos passes deseja, sinhor:"))
VpassB = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(QpassB*VpassB)):
	print("suficiente".upper)

-- ERROR:
File "XXXX", line 6
    if valorD < (Qtikets+Vtikets+QpassB+VpassB)
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:17:38) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(QpassB*VpassB)):
	print("suficiente".upper)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if valorD < ((Qtikets*Vtikets)+(QpassB*VpassB)):
NameError: name 'QpassB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:17:44) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(QpassB*VpassB)):
	print("suficiente".upper)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if valorD < ((Qtikets*Vtikets)+(QpassB*VpassB)):
NameError: name 'QpassB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:18:08) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(Qpass*Vpass)):
	print("suficiente".upper)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if valorD < ((Qtikets*Vtikets)+(QpassB*VpassB)):
NameError: name 'QpassB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:18:11) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(Qpass*Vpass)):
	print("suficiente".upper)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if valorD < ((Qtikets*Vtikets)+(QpassB*VpassB)):
NameError: name 'QpassB' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:18:54) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(Qpass*Vpass)):
	print("suficiente".upper)
else:
	print("insuficiente)

-- ERROR:
File "XXXX", line 9
    print("insuficiente)
                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:19:05) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(Qpass*Vpass)):
	print("suficiente".upper)
else:
	print("insuficiente")

-- OUTPUT:
insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:19:19) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(Qpass*Vpass)):
	print("suficiente")
else:
	print("insuficiente")

-- OUTPUT:
insuficiente
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:19:31) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(Qpass*Vpass)):
	print("suficiente")
else:
	print("insuficiente")

-- EXECUTION TIME:
0.116823
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
insuficiente
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
suficiente
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:08) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(Qpass*Vpass)):
	print("INSUFICIENTE")
else:
	print("SUFICIENTE")

-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:23:10) 
-- CODE:
valorD = float(input("saldo dispunivel,sinhor:"))
Qtikets = int(input("quantos tiket`s deseja, sinhor:"))
Vtikets = float(input("quanto custa cada tiket, sinhor"))
Qpass = int(input("quantos passes deseja, sinhor:"))
Vpass = float(input("valor dos passes , sinhor:"))
if valorD < ((Qtikets*Vtikets)+(Qpass*Vpass)):
	print("INSUFICIENTE")
else:
	print("SUFICIENTE")

-- EXECUTION TIME:
0.176216
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
